--- a/ec2_default_package.yml
+++ b/ec2_default_package.yml
@@ -1,4 +1,8 @@
 - hosts: all
   tasks:
-    - name: htopインストール
-      yum:  name=htop 
+    - name: htop インストール
+      yum:  name=htop
+    - name: yum-utils インストール
+      yum:  name=yum-utils
+    - name: wget インストール
+      yum:  wget
