--- a/linux_setup/roles/common/packages/tasks/main.yml
+++ b/linux_setup/roles/common/packages/tasks/main.yml
@@ -23,4 +23,4 @@
   package:
     name: "{{ item }}"
     state: present
-    with_items: "{{ required packages }}"
+    with_items: "{{ required_packages }}"
