--- a/linux_setup/roles/common/packages/tasks/main.yml
+++ b/linux_setup/roles/common/packages/tasks/main.yml
@@ -10,6 +10,7 @@
     update_cache: yes
   with_items:
     - "epel-release"
+    - "yum-utils"
     - "*"
   when: ansible_os_family == 'RedHat' # CentOS==RedHat
 
