--- a/ec2_docker_package.yml
+++ b/ec2_docker_package.yml
@@ -1,4 +1,4 @@
-- hosts: docker_server
+- hosts: all
   tasks:
     - name: yum-utils インストール
       yum: name=yum-utils
@@ -15,4 +15,3 @@
         state: started
         daemon_reload: yes
         enabled: yes
-        
