--- a/okd_set/dns_install.yml
+++ b/okd_set/dns_install.yml
@@ -1,5 +1,5 @@
 - name: bind install
-  hosts: dns_server
+  hosts: localhost
   tasks:
     - name: bind-chroot install
       yum: name=bind-chroot
